[gd_scene load_steps=3 format=3 uid="uid://ck7okenaced31"]

[ext_resource type="Script" path="res://scenes/settings_tab_container.gd" id="1_6h6f1"]
[ext_resource type="FontFile" uid="uid://dhk11k42eybnt" path="res://fonts/chela-one.regular.ttf" id="1_gkem4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6h6f1")
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_gkem4")
theme_override_font_sizes/font_size = 30
tab_alignment = 1
current_tab = 1
drag_to_rearrange_enabled = true

[node name="Sounding" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sounding"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sounding/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Sounding/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_gkem4")
theme_override_font_sizes/font_size = 30
text = "Volume :D"

[node name="HSlider" type="HSlider" parent="TabContainer/Sounding/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0
step = 4.0

[node name="Mute" type="CheckButton" parent="TabContainer/Sounding/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_gkem4")
theme_override_font_sizes/font_size = 34
text = "Mute"

[node name="Grafics" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Grafics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Grafics/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Resolutions" type="OptionButton" parent="TabContainer/Grafics/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="CheckButton" type="CheckButton" parent="TabContainer/Grafics/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fullscreen (disabled is windowed)"

[node name="controlz" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/controlz"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/controlz/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/controlz/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/controlz/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ummmm, under
           constructio n !!
sory!!!! 			uhmhh 🐇
                                              -ndvr"

[node name="???" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/???"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/???/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/???/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CURSE OF BUN BE UPON YE !!!
🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇🐇"
autowrap_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="TabContainer/???/MarginContainer/VBoxContainer"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="TabContainer/Sounding/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Sounding/MarginContainer/VBoxContainer/Mute" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="TabContainer/Sounding/MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="TabContainer/Grafics/MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="TabContainer/Grafics/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
